# check-version-equality

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
check_version_equality/: __init__.py
sanitize_pyproject_version/: __init__.py  _check_version_equality.py  _main.py  _module.py  _pyproject.py  _version_pep440.py
