[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "check_version_equality"
authors = [
    {name = "Danilo Horta", email = "danilo.horta@pm.me"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"
dynamic = ["version", "description"]
dependencies = [
    "toml >=0.10.2",
]

[project.scripts]
check-version-equality = "check_version_equality:main"
